--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.97.0",
     "dotenv": "^17.3.1",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.575.0"
   },
   "devDependencies": {
