--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@supabase/supabase-js": "^2.97.0",
     "dotenv": "^17.3.1",
     "groq-sdk": "^0.37.0",
-    "lucide-react": "^0.575.0"
+    "lucide-react": "^0.575.0",
+    "nodemailer": "^8.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.24",
