docs: create comprehensive User Manual and fix workflow env vars

--- a/.github/workflows/daily-strategic-radar.yml
+++ b/.github/workflows/daily-strategic-radar.yml
@@ -28,6 +28,7 @@ jobs:
           SMTP_PORT: ${{ secrets.SMTP_PORT }}
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
+          SMTP_SECURE: ${{ secrets.SMTP_SECURE }}
         run: node market-radar.js
         
       - name: Run Review Analyzer
@@ -39,4 +40,5 @@ jobs:
           SMTP_PORT: ${{ secrets.SMTP_PORT }}
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
+          SMTP_SECURE: ${{ secrets.SMTP_SECURE }}
         run: node review-analyzer.js
