--- a/.github/workflows/daily-strategic-radar.yml
+++ b/.github/workflows/daily-strategic-radar.yml
@@ -41,4 +41,5 @@ jobs:
           SMTP_USER: ${{ secrets.SMTP_USER }}
           SMTP_PASS: ${{ secrets.SMTP_PASS }}
           SMTP_SECURE: ${{ secrets.SMTP_SECURE }}
+          GOOGLE_PLACES_API_KEY: ${{ secrets.GOOGLE_PLACES_API_KEY }}
         run: node review-analyzer.js
