--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
+    "axios": "^1.13.5",
     "dotenv": "^17.3.1",
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.575.0",
